--- a/docker-task/template/plugin.xml
+++ b/docker-task/template/plugin.xml
@@ -2,7 +2,7 @@
 <go-plugin id="docker-task" version="1">
   <about>
       <name>Docker Task</name>
-      <version>0.1.0</version>
+      <version>${version}</version>
       <target-go-version>14.4.0</target-go-version>
       <description>Docker task to build, run with and push images</description>
       <vendor>
