--- a/docker-task/src/main/resources/views/task.template.html
+++ b/docker-task/src/main/resources/views/task.template.html
@@ -5,8 +5,30 @@
         <label for="IsDockerBuild">Build docker image</label>
     </div>
 </div>
-
-<div class="form_item_block" ng-show="IsDockerBuild == 'true'">
-    <label>Dockerfile path:<span class="asterisk">*</span></label>
-    <input type="text" ng-model="DockerFile" ng-required="true">
+<div class="docker_build" ng-show="IsDockerBuild == 'true'">
+    <div class="form_item_block" >
+        <label>Dockerfile path:<span class="asterisk">*</span></label>
+        <input type="text" ng-model="DockerFile">
+    </div>
+    <div class="form_item_block" >
+        <label>Tag:</label>
+        <input type="text" ng-model="DockerBuildTag">
+    </div>
+</div>
+<div class="form_item_block">
+    <div class="checkbox_row">
+        <input id="IsDockerRun2" type="checkbox" ng-model="IsDockerRun2" ng-init="IsDockerRun2 = IsDockerRun" ng-change="IsDockerRun = IsDockerRun2" ng-true-value="true" ng-false-value="false">
+        <input id="IsDockerRun" type="hidden" ng-model="IsDockerRun" value="{{IsDockerRun}}">
+        <label for="IsDockerRun">Run command in docker image</label>
+    </div>
+</div>
+<div class="docker_build" ng-show="IsDockerRun == 'true'">
+    <div class="form_item_block" >
+        <label>Script path:<span class="asterisk">*</span></label>
+        <input type="text" ng-model="DockerRunScript">
+    </div>
+    <div class="form_item_block" >
+        <label>Arguments:</label>
+        <input type="text" ng-model="DockerRunArguments">
+    </div>
 </div>
