Adding docker run execution

--- a/docker-task/src/main/resources/views/task.template.html
+++ b/docker-task/src/main/resources/views/task.template.html
@@ -30,7 +30,7 @@
         <span class="form_error" ng-show="GOINPUTNAME[DockerRunScript].$error.server">{{GOINPUTNAME[DockerRunScript].$error.server}}</span>
     </div>
     <div class="form_item_block" >
-        <label>Arguments:</label>
-        <input type="text" ng-model="DockerRunArguments">
+        <label>Arguments (one per line):</label>
+        <textarea ng-model="DockerRunArguments" wrap="off" style="width: 250px; resize: both;" cols="58" autocomplete="off"></textarea>
     </div>
 </div>
